--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{% static 'web/css/style.css' %}" type="text/css" media="all">
   <link rel="stylesheet" href="{% static 'web/css/cookiesStyle.css' %}" type="text/css" media="all">
   <script type="text/javascript" src="{% static 'web/js/cookies.js' %}" ></script>
+  <!--<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>-->
   <script type="text/javascript" src="{% static 'web/js/jquery-1.4.2.min.js' %}" ></script>
   <script type="text/javascript" src="{% static 'web/js/cufon-yui.js' %}"></script>
   <script type="text/javascript" src="{% static 'web/js/Humanst521_BT_400.font.js' %}"></script>
@@ -27,7 +28,7 @@
   <![endif]-->
 </head>
 
-<body>
+<body onload="main()">
   <!-- header -->
   {% block header %}
   <header>
