Añadido formulario para entradas desde la web

--- a/accounts/templates/accounts/panel.html
+++ b/accounts/templates/accounts/panel.html
@@ -11,8 +11,8 @@
     <div>
         <nav>
         <ul>
-          <li><a href="{% url 'web.areasAdmin' %}" class="current">Areas</a></li>
-          <li><a href="{% url 'web.entradasAdmin' %}">Entradas</a></li>
+          <li><a href="{% url 'web.areasAdmin' %}" class="current">Añadir Areas</a></li>
+          <li><a href="{% url 'accounts.elegirEntrada' %}">Añadir entradas</a></li>
         </ul>
       </nav>
     </div>
