--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,31 +2,36 @@
 {% load static %}
 
 {% block content %}
-
+<link rel="stylesheet" href="{% static 'web/css/loginStyle.css' %}" type="text/css" media="all">
 <div class="main-box">
-    <div class="col-md-4 col-md-offset-4">
-        <div class="page-header"><h2>Login</h2></div>
-        {% if mensaje %}
-        <div class="alert alert-danger">
-            {{ mensaje }}
-        </div>
-        {% endif %}
+    <div class="container">
+        <div class="inside">
+            <div class="wrapper">
+                <div class="col-md-4 col-md-offset-4">
+                    {% if mensaje %}
+                    <div class="alert alert-danger">
+                        {{ mensaje }}
+                    </div>
+                    {% endif %}
 
-        <form method="post" action="">
-            {% csrf_token %}
-            <div class="form-group">
-                <label class="control-label" for="username">Nombre de usuario</label>
-                <input type="text" id="username" name="username" class="form-control" value="{{ username }}">
+                    <form method="post" action="" class="form-container">
+                        <div class="form-title page-header"><h2>Login</h2></div>
+                        {% csrf_token %}
+                        <div class="form-title">Nombre de usuario</div>
+                        <input type="text" id="username" name="username" class="form-field" value="{{ username }}">
+
+                        <div class="form-title">Contraseña</div>
+                        <input type="password" name="password" id="password" class="form-field">
+
+                        <div class="submit-container">
+                            <button type="submit" class="submit-button">Login</button>
+                                <a href="{% url 'accounts.registro' %}" ><button class="submit-button">Registro</button></a>
+                        </div>
+                    </form>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" name="password" id="password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-    </div>
-    <div class="col-md-4 col-md-offset-4">
-        <a href="{% url 'accounts.registro' %}" >Registro</a>
+        </div>
     </div>
 </div>
 {% endblock content %}
