--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{% static 'web/css/reset.css' %}" type="text/css" media="all">
   <link rel="stylesheet" href="{% static 'web/css/style.css' %}" type="text/css" media="all">
   <link rel="stylesheet" href="{% static 'web/css/cookiesStyle.css' %}" type="text/css" media="all">
+  <link rel="stylesheet" href="{% static 'web/css/botones.css' %}" type="text/css" media="all">
   <script type="text/javascript" src="{% static 'web/js/cookies.js' %}" ></script>
   <!--<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>-->
   <script type="text/javascript" src="{% static 'web/js/jquery-1.4.2.min.js' %}" ></script>
@@ -71,8 +72,9 @@
   <footer>
     <div class="container">
     	<div class="wrapper">
-        <div class="fleft">Copyright - Type in your name here</div>
-        <div class="fright"><a rel="nofollow" href="http://www.templatemonster.com/" target="_blank">Website template</a> designed by TemplateMonster.com&nbsp; &nbsp; |&nbsp; &nbsp; <a href="http://templates.com/product/3d-models/" target="_blank">3D Models</a> provided by Templates.com</div>
+        <div class="fleft" >Copyright - DAI UPV</div>
+        <!--<div class="fright"><a rel="nofollow" href="http://www.templatemonster.com/" target="_blank">Website template</a> designed by TemplateMonster.com&nbsp; &nbsp; |&nbsp; &nbsp; <a href="http://templates.com/product/3d-models/" target="_blank">3D Models</a> provided by Templates.com</div>
+        -->
       </div>
     </div>
   </footer>
