--- a/web/templates/noticias/areasAdmin.html
+++ b/web/templates/noticias/areasAdmin.html
@@ -2,19 +2,34 @@
 {% load static %}
 
 {% block content %}
+<style>
+    h2 {
+        text-align: center;
+        margin-top: 1em;
+    }
+</style>
 <div class="main-box">
-    <div>
-        <h2>Perfil de usuario</h2>
-    </div>
-    Hola de nuevo {{ user.username }}<br>
+    <h2>Hola de nuevo {{ user.username }}<br> </h2>
+    <div class="container">
+      <div class="inside">
+        <div class="wrapper">
+                <div>
+                    <!-- #gallery -->
+                    <section id="gallery">
+                        <div id="botonesArea" >
+                            <ul>
+                                {% for area in areas %}
+                                <li ><a href="{% url 'area' area.nombre %}" title="{{ area.nombre }}"><span>{{ area.nombre }}</span></a></li>
+                                {% endfor %}
 
-    <div>
-        {% for area in areas %}
-        <ul>
-            <h2><a href=""><h4>{{ area.nombre}}</h4></a></h2>
-        </ul>
-        {% endfor %}
-        <a href="{% url 'web.createArea' %}">Crear Area</a>
+                            </ul>
+                        </div>
+                    </section>
+                    <!-- /#gallery -->
+                    <a href="{% url 'web.createArea' %}"><button class="button" style="margin: 10% 0 0 35%">Crear Area</button></a>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
