Arreglado registro de usuario. Cambiados mas formularios. Formularios de modificacion de tablas de la BD, movidos a la app accounts. Arreglado numero del dia de las entradas en el index. DISENY

--- a/accounts/templates/accounts/areasAdmin.html
+++ b/accounts/templates/accounts/areasAdmin.html
@@ -26,7 +26,7 @@
                         </div>
                     </section>
                     <!-- /#gallery -->
-                    <a href="{% url 'web.createArea' %}"><button class="button" style="margin: 10% 0 0 35%">Crear Area</button></a>
+                    <a href="{% url 'accounts.createArea' %}"><button class="button" style="margin: 10% 0 0 35%">Crear Area</button></a>
                 </div>
             </div>
         </div>
