--- a/accounts/templates/accounts/createArea.html
+++ b/accounts/templates/accounts/createArea.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Registro de usuario{% endblock title %}
 
 {% block content %}
+<style>
+    h2 {
+        text-align: center;
+        margin-top: 1em;
+    }
+</style>
 <link rel="stylesheet" href="{% static 'web/css/loginStyle.css' %}" type="text/css" media="all">
 <div class="main-box">
+        <h2>{{ user.username }}</h2>
     <div class="container">
-        <div class="inside">
-            <div class="wrapper">
-                <form method="post" action="" enctype="multipart/form-data" class="form-container">
+      <div class="inside">
+        <div class="wrapper">
+
+            <div class="col-md-4 col-md-offset-4">
+                <form method="post" action="" class="form-container" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="form-title page-header"><h2 >Registro</h2></div>
+                    <div class="form-title page-header"><h2>Creando area</h2></div>
                     {{ form.as_p }}
                     <div class="submit-container">
                         <button type="submit" class="submit-button">Registrar</button>
@@ -18,6 +26,7 @@
                 </form>
             </div>
         </div>
+      </div>
     </div>
 </div>
 {% endblock content %}
