--- a/accounts/templates/accounts/gracias.html
+++ b/accounts/templates/accounts/gracias.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="main-box">
+    {% csrf_token %}
     <h2>{{ username }} gracias por registrarte!</h2>
 </div>
 {% endblock content %}
