--- a/web/static/web/css/loginStyle.css
+++ b/web/static/web/css/loginStyle.css
@@ -5,6 +5,14 @@
 .wrapper{
     margin: 0 0 0 20%
 }
+
+.reg{
+   margin: -12% 0 0 5%;
+}
+
+h2{
+   font-size: 200%;
+}
 .form-container {
    border: 1px solid #ffffff;
    background: #f7d9b7;
