--- a/accounts/templates/accounts/panel.html
+++ b/accounts/templates/accounts/panel.html
@@ -20,7 +20,7 @@
     <div>
         <nav>
         <ul>
-          <li><a href="{% url 'accounts.areasAdmin' %}" class="current"><button class="button">Modificar Perfil</button></a></li>
+          <li><a href="{% url 'accounts.perfil' %}" class="current"><button class="button">Modificar Perfil</button></a></li>
           <li><a href="{% url 'accounts.areasAdmin' %}" class="current"><button class="button">Añadir Areas</button></a></li>
           <li><a href="{% url 'accounts.elegirEntrada' %}"><button class="button">Añadir entradas</button></a></li>
         </ul>
