Cambiada forma de crear usuarios.

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -12,7 +12,7 @@
             Hola de nuevo {{ user.username }}<br>
 
             <div>
-                <img src="{{ MEDIA_URL }}{{ user.userprofile.photo }}" alt="Imagen de {{ user.username }}"/>
+                <img src="{{ MEDIA_URL }}{{ user.photo }}" alt="Imagen de {{ user.username }}"/>
             </div>
         </div>
       </div>
