--- a/web/static/web/css/loginStyle.css
+++ b/web/static/web/css/loginStyle.css
@@ -36,7 +36,7 @@ h2{
    width:50%;
 
    }
-.form-field {
+input {
    border: 1px solid #c9b7a2;
    background: #f5f5f5;
    -webkit-border-radius: 6px;
@@ -50,7 +50,7 @@ h2{
    margin-bottom:20px;
    width:280px;
    }
-.form-field:focus {
+input:focus {
    background: #fff;
    color: #000000;
    }
