aYa se puede modificar el perfil.

--- a/accounts/templates/accounts/registro.html
+++ b/accounts/templates/accounts/registro.html
@@ -17,7 +17,7 @@
                     {{ user_form.first_name }}
                     <div class="form-title">Apellidos</div>
                     {{ user_form.last_name }}
-                    <div class="form-title">email</div>
+                    <div class="form-title">Email</div>
                     {{ user_form.email }}
                     <div class="form-title">Contraseña </div>
                     {{ user_form.password }}
