--- a/accounts/templates/accounts/perfil.html
+++ b/accounts/templates/accounts/perfil.html
@@ -14,9 +14,14 @@
                 <div class="form-title"><h2>Login</h2></div>
                 <div class="form-title">Nombre de usuario </div>
                 <div class="form-field username">{{user.username}}</div></br>
-                {{form.as_p}}
+                <div class="form-title">Email</div>
+                {{user_form.email}}
+                <div class="form-title">Telefono de contacto</div>
+                {{perfil_form.telefono}}
+                <div class="form-title">Foto</div>
+                {{perfil_form.photo}}
                 <div class="submit-container">
-                    <input class="submit-button" type="submit" value="Enviar" />
+                    <input class="submit-button" type="submit" value="Actualizar" />
                     <a href="{% url 'accounts.change_password' %}" class="submit-button">Cambiar contraseña</a>
                 </div>
                 <div class="form-title">Ultima conexion: {{user.last_login}}</div>
