--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
   <script type="text/javascript" src="{% static 'web/js/gallery_init.js' %}"></script>
   <script type="text/javascript" src="{% static 'web/js/cufon-replace.js' %}"></script>
   <!-- CKEDITOR -->
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+  <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
   <!--[if lt IE 7]>
   	<link rel="stylesheet" href="{% static 'web/css/ie/ie6.css' %}" type="text/css" media="all">
   <![endif]-->
