--- a/web/templates/noticias/about.html
+++ b/web/templates/noticias/about.html
@@ -5,6 +5,11 @@
   <div class="main-box">
     <div class="container">
       <div class="inside">
+        <div class="separator"></div>
+            <!-- #gallery -->
+            {% include "noticias/shorts/areas.html" %}
+            <!-- /#gallery -->
+        <div class="separator"></div>
         <div class="wrapper">
         	<!-- aside -->
           <aside>
