--- a/web/templates/noticias/politica_privacidad.html
+++ b/web/templates/noticias/politica_privacidad.html
@@ -6,6 +6,11 @@
     <div class="main-box">
       <div class="container">
         <div class="inside">
+            <div class="separator"></div>
+            <!-- #gallery -->
+            {% include "noticias/shorts/areas.html" %}
+            <!-- /#gallery -->
+            <div class="separator"></div>
           <div class="wrapper">
             <h2> COOKIES </h2>
               <div style="margin-bottom: 10px">
