--- a/web/templates/noticias/preguntas_frecuentes.html
+++ b/web/templates/noticias/preguntas_frecuentes.html
@@ -6,6 +6,11 @@
   <div class="main-box">
     <div class="container">
       <div class="inside">
+          <div class="separator"></div>
+            <!-- #gallery -->
+            {% include "noticias/shorts/areas.html" %}
+            <!-- /#gallery -->
+            <div class="separator"></div>
         <div class="wrapper">
         	<h2>Te preguntaras algunas cosas.. es normal</h2>
             <h3> Aqui te daremos respuestas a las preguntas mas comunes</h3>
