--- a/accounts/templates/accounts/entradasAdmin.html
+++ b/accounts/templates/accounts/entradasAdmin.html
@@ -5,17 +5,23 @@
 
 {% block content %}
 <div class="main-box">
-    <div class="col-md-6 col-sm-offset-3">
-        <div class="page-header">
-            <h2>Registro Usuario</h2>
-        </div>
+    <div class="container">
+      <div class="inside">
+        <div class="wrapper">
+            <div class="col-md-6 col-sm-offset-3">
+                <div class="page-header">
+                    <h2>Creando Entrada</h2>
+                </div>
 
-        <form method="post" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {{ form.media }}
-            <button type="submit" class="btn btn-primary">Registrar</button>
-        </form>
-    </div>
+                <form method="post" action="" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    {{ form.media }}
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                </form>
+            </div>
+       </div>
+     </div>
+  </div>
 </div>
 {% endblock content %}
