--- a/accounts/templates/accounts/elegirEntradaArea.html
+++ b/accounts/templates/accounts/elegirEntradaArea.html
@@ -6,12 +6,12 @@
     <div class="container">
       <div class="inside">
         <!-- .news -->
-        <h2>{{area}}</h2>
+            <h2>{{area}}</h2>
             <ul class="news">
               {% for entrada in entradas %}
                 <li>
                   <figure><strong>{{ entrada.fecha|date:"t" }}</strong>{{ entrada.fecha|date:"M" }}</figure>
-                  <a href="{% url 'entrada' entrada.id %}"><h3>{{ entrada.titulo}}</h3>
+                  <a href="{% url 'accounts.entrada' entrada.id %}"><h3>{{ entrada.titulo}}</h3>
                   {% autoescape off %}
                     {{ entrada.resumen }}
                   {% endautoescape %}</a>
