--- a/accounts/templates/accounts/panel.html
+++ b/accounts/templates/accounts/panel.html
@@ -9,12 +9,24 @@
         margin-top: 1em;
     }
     .entradas{
-        float: left;
+        margin: 0 0 0 17%;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        max-width: 75%;
+
     }
-    .entradas .mod {
-        margin: 4% 0 0 0;
+    .button{
+        margin: 1%;
+        width: 40%;
+        height: 50%;
+        max-height: 3em;
+        line-height: 22px;
+        padding:20px;
     }
+
 </style>
+
 
 <div class="main-box">
     <h2>Hola de nuevo {{ user.username }}<br> </h2>
@@ -24,8 +36,16 @@
             <div>
                 <nav>
                 <ul>
-                    <li><a href="{% url 'accounts.perfil' %}" class="current"><button class="button">Modificar Perfil</button></a></li>
-                    <li><a href="{% url 'accounts.areasAdmin' %}" class="current"><button class="button">Añadir Areas</button></a></li>
+                    <h5 class="one"><span>Perfil</span></h5>
+                    <div class="entradas">
+                        <li><a href="{% url 'accounts.perfil' %}" class="current"><button class="button">Modificar Perfil</button></a></li>
+                        <li><a href="{% url 'accounts.index' %}" class="current"><button class="button">Ver mi Perfil</button></a></li>
+                    </div>
+                    <h5 class="one"><span>Areas</span></h5>
+                    <div class="entradas">
+                        <li><a href="{% url 'accounts.areasAdmin' %}" class="current"><button class="button">Añadir Areas</button></a></li>
+                    </div>
+                    <h5 class="one"><span>Entradas</span></h5>
                     <div class="entradas">
                         <li><a href="{% url 'accounts.elegirEntrada' %}"><button class="button">Añadir entradas</button></a></li>
                         <li><a href="{% url 'accounts.modificarEntrada' %}"><button class="button mod">Modificar una entrada</button></a></li>
