--- a/web/static/web/css/botones.css
+++ b/web/static/web/css/botones.css
@@ -1,38 +1,54 @@
+.button{
+    position: relative;
+    float: left;
+    margin: 0 0 0 1%;
 
+}
 
 .button {
-
-   position: relative;
-   float: left;
-   margin: 0 0 0 1%;
-
-   border-top: 1px solid #cfb8cf;
-   background: #cfcda8;
-   background: -webkit-gradient(linear, left top, left bottom, from(#dedede), to(#cfcda8));
-   background: -webkit-linear-gradient(top, #dedede, #cfcda8);
-   background: -moz-linear-gradient(top, #dedede, #cfcda8);
-   background: -ms-linear-gradient(top, #dedede, #cfcda8);
-   background: -o-linear-gradient(top, #dedede, #cfcda8);
-   padding: 20px 40px;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #004fed;
-   font-size: 24px;
-   font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
+   border: 1px solid #0a3c59;
+   background: #bae5ff;
+   background: -webkit-gradient(linear, left top, left bottom, from(#dceefa), to(#bae5ff));
+   background: -webkit-linear-gradient(top, #dceefa, #bae5ff);
+   background: -moz-linear-gradient(top, #dceefa, #bae5ff);
+   background: -ms-linear-gradient(top, #dceefa, #bae5ff);
+   background: -o-linear-gradient(top, #dceefa, #bae5ff);
+   background-image: -ms-linear-gradient(top, #dceefa 0%, #bae5ff 100%);
+   padding: 10.5px 21px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   text-shadow: #7ea4bd 0 1px 0;
+   color: #06426c;
+   font-size: 21px;
+   font-family: helvetica, serif;
    text-decoration: none;
    vertical-align: middle;
    }
 .button:hover {
-   border-top-color: #d1f0b8;
-   background: #d1f0b8;
-   color: #3b2c59;
+   border: 1px solid #0a3c59;
+   text-shadow: #1e4158 0 1px 0;
+   background: #3e779d;
+   background: -webkit-gradient(linear, left top, left bottom, from(#65a9d7), to(#3e779d));
+   background: -webkit-linear-gradient(top, #65a9d7, #3e779d);
+   background: -moz-linear-gradient(top, #65a9d7, #3e779d);
+   background: -ms-linear-gradient(top, #65a9d7, #3e779d);
+   background: -o-linear-gradient(top, #65a9d7, #3e779d);
+   background-image: -ms-linear-gradient(top, #65a9d7 0%, #3e779d 100%);
+   color: #fff;
    }
 .button:active {
-   border-top-color: #41ff30;
-   background: #41ff30;
+   text-shadow: #1e4158 0 1px 0;
+   border: 1px solid #0a3c59;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#3e779d));
+   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+   background: -o-linear-gradient(top, #3e779d, #65a9d7);
+   background-image: -ms-linear-gradient(top, #3e779d 0%, #65a9d7 100%);
+   color: #fff;
    }
