--- a/web/static/web/css/style.css
+++ b/web/static/web/css/style.css
@@ -460,3 +460,36 @@ footer {
     height: 0.2em;
     background: grey;
 }
+
+/* Another separator */
+ h5 {
+        position: relative;
+        margin-top: 20px;
+
+  }
+
+  h5.one {
+        margin-top: 0;
+        text-align: center;
+        font-size: 2em;
+        margin: 1% 0 2% 0;
+  }
+
+  h5.one:before {
+        content: "";
+        display: block;
+        border-top: solid 1px black;
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        top: 50%;
+        z-index: 1;
+  }
+
+  h5.one span {
+    background: #fff;
+    padding: 0 20px;
+    position: relative;
+    z-index: 5;
+
+  }
