--- a/accounts/templates/accounts/perfil.html
+++ b/accounts/templates/accounts/perfil.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
             <form class="form-container" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="form-title"><h2>Login</h2></div>
+                <!--<div class="form-title"><h2>Login</h2></div>
                 <div class="form-title">Nombre de usuario </div>
                 <div class="form-field username">{{user.username}}</div></br>
                 <div class="form-title">Email</div>
@@ -19,7 +19,7 @@
                 <div class="form-title">Telefono de contacto</div>
                 {{perfil_form.telefono}}
                 <div class="form-title">Foto</div>
-                {{perfil_form.photo}}
+                {{perfil_form.photo}}-->
                 <div class="submit-container">
                     <input class="submit-button" type="submit" value="Actualizar" />
                     <a href="{% url 'accounts.change_password' %}" class="submit-button">Cambiar contraseña</a>
