--- a/accounts/templates/accounts/panel.html
+++ b/accounts/templates/accounts/panel.html
@@ -29,7 +29,7 @@
 
 
 <div class="main-box">
-    <h2>Hola de nuevo {{ user.username }}<br> </h2>
+    <h2>Hola de nuevo {{ user.first_name }}<br> </h2>
     <div class="container">
       <div class="inside">
         <div class="wrapper">
