--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -18,7 +18,7 @@
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
             {% endif %}
-            <button type="submit">{% trans 'Logout' %}</button>
+            <button type="submit" class="button">{% trans 'Logout' %}</button>
           </form>
 
         </div>
