--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,4 +1,4 @@
- <!-- TODO  -->
+ <!-- TODO  Mostrar mensaje-->
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,11 +6,19 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+ <div class="main-box">
+    <div class="container">
+      <div class="inside">
+        <div class="wrapper">
+            <h2>{% trans "Cambiar contraseña" %}</h2>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" name="action" class="button">{% trans "Cambiar" %}</button>
+            </form>
+        </div>
+      </div>
+    </div>
+ </div>
 {% endblock %}
