--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,10 +1,18 @@
- <!-- TODO  -->
+
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans "Cambio de contraseña" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="main-box">
+    <div class="container">
+      <div class="inside">
+        <div class="wrapper">
+            <h2>{% trans "Cambio de contraseña" %}</h2>
+            <p>{% trans 'Has cambiado la contraseña.' %}</p>
+        </div>
+      </div>
+    </div>
+</div>
 {% endblock %}
