--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -1,4 +1,3 @@
- <!-- TODO  -->
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,7 +5,15 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+  <div class="main-box">
+    <div class="container">
+      <div class="inside">
+        <div class="wrapper">
+            <h2>{% trans "Sign Up Closed" %}</h2>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+            <p>{% trans "Perdon, pero el registro esta temporalmente cerrado." %}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
