añadida semana cultural. Dos tablas y nuevo template. Faltan forms en admin para actividades

--- a/web/templates/noticias/shorts/areas.html
+++ b/web/templates/noticias/shorts/areas.html
@@ -4,9 +4,12 @@
     <div id="botonesArea" >
         <ul>
             {% for area in areas %}
-            <li ><a href="{% url 'area' area.nombre %}" title="{{ area.nombre }}"><span>{{ area.nombre }}</span></a></li>
+                {% if area.nombre == "Cultural" %}
+                    <li ><a href="{% url 'area' area.nombre %}" title="{{ area.nombre }}"><span>{{ area.nombre }}</span></a></li>
+                {% else %}
+                    <li ><a href="{% url 'area' area.nombre %}" title="{{ area.nombre }}"><span>{{ area.nombre }}</span></a></li>
+                {% endif %}
             {% endfor %}
-
         </ul>
     </div>
 </section>
